style.css
ul  {
    list-style: none;
}

div.timer {
    display: none;
    font-weight: bold;
}

.correct-answer, .incorrect-answer, .restart-btn, .scoreboard-pg, .quiz-results, ul#answer-choices {
    display: none;
}

.quiz-content {
    margin-left: 4em;
}

#answer-choices {
    padding-left: 0;
}

.correct-answer, .incorrect-answer {
    margin-left: -20px !important;
}

